# ShellProblem

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  generate_meshes.py  run_directory.py  run_directrory.py
grids/: grid.geo  hull_shell.iges  shell.geo  shell_tetr.geo  simple_shell.iges
materials/: simple_material.prm
meshes/: ice_island_with_legs.geo  split_cube.geo
models/: cube.prm
models/simple_shell/: simple_shell_1.prm  simple_shell_2.prm  simple_shell_3.prm
src/: MeshCreator.cpp  MeshCreator.hpp  TaskReader.cpp  TaskReader.hpp  main.cpp
src/TaskReader/: Geometry.cpp  Geometry.hpp  ParsedArgs.cpp  ParsedArgs.hpp  SimpleMaterial.cpp  SimpleMaterial.hpp  TaskReader.cpp  TaskReader.hpp
src/boundaries/: Boundaries.hpp  BoundariesFactory.cpp  BoundariesFactory.hpp  BoundariesGroup.cpp  BoundariesGroup.hpp  BoundariesMap.cpp  BoundariesMap.hpp  DirichletBoundaries.cpp  DirichletBoundaries.hpp
src/launcher/: Launcher.cpp  Launcher.hpp  ParsedArgs.cpp  ParsedArgs.hpp  SimpleMaterial.cpp  SimpleMaterial.hpp  TaskReader.cpp  TaskReader.hpp
src/linear_solver/: LinearSolverBase.hpp  LinearSolverCG.cpp  LinearSolverCG.hpp  LinearSolverFactory.cpp  LinearSolverFactory.hpp  LinearSolverGMRES.cpp  LinearSolverGMRES.hpp
src/material/: SimpleMaterial.cpp  SimpleMaterial.hpp
src/materials/: Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  MaterialsGroup.cpp  MaterialsGroup.hpp
src/mesh/: CubeMesh.cpp  CubeMesh.hpp  GeneratedMesh.cpp  GeneratedMesh.hpp  MeshBase.cpp  MeshBase.hpp  MeshCreator.cpp  MeshCreator.hpp  MeshFactory.cpp  MeshFactory.hpp  MeshUtilities.cpp  MeshUtilities.hpp  MeshWrappers.cpp  MeshWrappers.hpp  MshMesh.hpp  SimpleShellMesh.cpp  SimpleShellMesh.hpp  Utilities.cpp  Utilities.hpp
src/mesh_markers/: BoundaryMarker.hpp  CircleMarker.cpp  CircleMarker.hpp  HalfSphereMarker.cpp  HalfSphereMarker.hpp  MeshMarkerBase.cpp  MeshMarkerBase.hpp  MeshMarkersFactory.cpp  MeshMarkersFactory.hpp  MeshMarkersGroup.hpp  PlaneMarker.cpp  PlaneMarker.hpp  SphereMarker.cpp  SphereMarker.hpp  TwoPlanesMarker.cpp
src/postprocessors/: OutputWriter.cpp  OutputWriter.hpp  Postprocessor.cpp  Postprocessor.hpp  VectorOutputWriter.hpp
src/solvers/: Boundaries.cpp  Boundaries.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp  ElasticitySolver.cpp  ElasticitySolver.hpp  HeatSolver.cpp  HeatSolver.hpp  SolverBase.cpp  SolverBase.hpp  SolverBuilder.cpp  SolverBuilder.hpp
src/task/: Task.cpp  Task.hpp  TaskFactory.cpp  TaskFactory.hpp  TaskUtil.cpp  TaskUtil.hpp
src/tests/: mesh_markers_test.cpp  test.cpp
src/util/: JsonUtil.cpp  JsonUtil.hpp  MeshUtilities.cpp  MeshUtilities.hpp
tasks/: cube_simple_elasticity.json  cube_simple_heat.json  cube_task.prm  cube_two_materials_elasticity.json  cylinder_simple_heat.json  ice_island_simple_elasticity.json  ice_island_with_legs.json  ice_island_with_legs_heat.json  ice_island_with_one_leg.json  island_with_well_simple_elasticity.json  layered_island_simple_elasticity.json  simple_island_simple_elasticity.json  simple_shell.json  simple_shell_simple_elasticity.json  simple_shell_simple_heat.json  simple_shell_task.prm  split_cube.json
tasks/convergence_test/: 30.json  40.json  50.json  60.json  70.json  80.json
tasks/cube/: simple_elasticity.json  simple_heat.json
tasks/elasticity_test/: simple_shell_simple_elasticity_1.json  simple_shell_simple_elasticity_2.json  simple_shell_simple_elasticity_3.json  simple_shell_simple_elasticity_4.json  simple_shell_simple_elasticity_5.json
tasks/simple_shell/: simple_shell_task_1.prm  (+2 more)
(+76 files in other folders)
